@@ -1,3 +1,8 @@
+2008-09-03  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_style_realize):
+	Reworked contrast function, your themes may change
+
 2008-09-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_style.c (murrine_style_draw_box):
